<resources>
    <string name="app_name">BackApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Activity Titles -->
    <string name="title_activity_main_screen">Back-App</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu Titles -->
    <string name="menu_action_settings">Settings</string>
    <string name="sort_list_a_z">Sort List A-Z</string>
    <string name="sort_list_z_a">Sort List Z-A</string>
    <string name="search_menu">Search</string>
    <string name="select_all">Select All</string>
    <string name="unselected_all">Unselect All</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete_marked">Delete marked</string>
    <string name="menu_action_about">About</string>

    <!-- SharedPreferences Key's -->
    <string name="name_sharedPref">Settings</string>
    <!-- Int: -->
    <string name="sortType_key">SortType</string>
    <string name="menu_action_logout">Logout</string>
    <string name="action_download_marked">Download marked</string>
    <string name="action_install">Install</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_file">Delete file</string>
    <string name="uninstall_apk">Uninstall</string>
    <string name="cloud_share_card_action">Share</string>
    <string name="cloud_download_card_action">Download</string>
    <string name="cloud_delete_card_action">Delete</string>


    <string name="device_info_card_action">Info</string>
    <string name="device_upload_card_action">Upload</string>
    <string name="device_uninstall_card_action">Uninstall</string>
    <string name="refresh_device">Refresh</string>


</resources>
