<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_menu"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_sort_a_z"
        android:orderInCategory="100"
        android:title="@string/sort_list_a_z"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_z_a"
        android:orderInCategory="100"
        android:title="@string/sort_list_z_a"
        app:showAsAction="never" />

</menu>