<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.random.backapp.MainActivity">
    <item
        android:orderInCategory="75"
        android:title=""
        app:showAsAction="always"
        android:visible="true"
        android:id="@+id/user_name_text"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="81"
        android:title="@string/menu_action_logout"
        app:showAsAction="never"
        android:visible="true"/>

    <item
        android:id="@+id/action_login"
        android:orderInCategory="82"
        android:title="Login"
        app:showAsAction="never"
        android:visible="true"/>

    <item
        android:id="@+id/action_account_info"
        android:orderInCategory="83"
        android:title="Dropbox Account"
        app:showAsAction="never"
        android:visible="true"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="90"
        android:title="@string/menu_action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="91"
        android:title="@string/menu_action_about"
        app:showAsAction="never" />
</menu>
