<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView

        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_view_item_shape">


            <ImageView
                android:id="@+id/app_icon"
                android:transitionName="AppName"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/leftSide"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/container_progress"
                android:layout_toRightOf="@+id/app_icon"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/app_name"
                    android:transitionName="AppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:text="Example Header"


                    android:textColor="@color/colorBlack"
                    android:textSize="22dp"
                    android:textStyle="bold" />



            </LinearLayout>

            <ImageView
                android:id="@+id/cloud_check_v"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="3dp"
                app:srcCompat="@mipmap/ic_cloud_check_v"
                android:layout_alignParentEnd="true"
                />






            <LinearLayout
                android:id="@+id/item_left_checkbox"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <TextView
                android:id="@+id/item_size"
                android:transitionName="AppSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/leftSide"
                android:paddingLeft="5dp"
                android:paddingTop="0dp"
                android:text="APK Size: 12 MB"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/item_version"
                android:transitionName="AppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_size"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:text="Version: v1.6"
                android:textSize="13dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="5dp">
                <Button
                    android:id="@+id/share_apk_card_action"
                    android:transitionName="AppShare"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/download_apk_card_action"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/cloud_share_card_action"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/download_apk_card_action"
                    android:transitionName="AppDownload"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/cloud_download_card_action"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/delete_apk_card_action"
                    android:transitionName="AppDelete"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/download_apk_card_action"
                    android:text="@string/cloud_delete_card_action"
                    android:textColor="@color/colorRed"
                    android:textStyle="bold"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/container_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/item_left_checkbox"
                android:layout_marginTop="3dp">

                <ProgressBar
                    android:id="@+id/item_upload_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:background="@drawable/circle_progress_shape"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:max="100"
                    />
                <ImageView
                    android:id="@+id/cancel_progress_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@mipmap/ic_cancel_progress_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>